# Unified-Shopping-List-Helper

./: .gitignore  README.md  makefile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
Lambda/: requirements.txt
Lambda/src/: skill.py
Lambda/src/clients/: shopping_list_api.py
Lambda/src/handlers/: __init__.py  generic.py  list_events.py  skill_messaging.py
Lambda/src/interfaces/: dynamodb.py  list_management.py  secrets.py  shopping_list_api.py
Lambda/src/models/: _base.py  dynamodb.py  lists.py  messages.py  shopping_list_api.py
deploy/: template.yaml
