[tool.poetry]
name = "Unified Shopping List Helper"
version = "0.1.0"
description = "Alexa skill to sync new shopping list items over to the Unified Shopping List"
authors = ["Michael Genson <71845777+michael-genson@users.noreply.github.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.9"
ask-sdk = "^1.17.1"
requests = "^2.28.1"
dynamodb-json = "^1.3"
pyhumps = "^3.8.0"
pydantic = "^1.10.2"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.26.19"
types-boto3 = "^1.0.2"
types-requests = "^2.28.11.5"
mypy = "^0.991"
black = "^22.10.0"
isort = "^5.10.1"
ask-sdk-local-debug = "^1.1.0"

